--- a/src/app/components/admin/menu-list/menu-list.component.html
+++ b/src/app/components/admin/menu-list/menu-list.component.html
@@ -137,13 +137,13 @@
         <input
           #inputRef
           type="submit"
-          [value]="selectedMenu ? 'Update' : 'Save'"
+          [value]="selectedMenu() ? 'Update' : 'Save'"
           class="text-gray-50 bg-linear-to-r from-teal-400 via-teal-500 to-teal-600 hover:bg-linear-to-br focus:ring-1 focus:outline-none focus:ring-teal-300 shadow-lg shadow-teal-500/50 font-medium rounded-lg text-sm px-5 py-2.5 text-center me-2 mb-2 h-10 w-full"
           (keydown.enter)="handleEnterKey($event, 3)"
         />
 
         <button
-          (click)="formReset($event)"
+          (click)="formReset()"
           class="text-gray-50 bg-linear-to-r from-red-400 via-red-500 to-red-600 hover:bg-linear-to-br focus:ring-1 focus:outline-none focus:ring-red-300 shadow-lg shadow-red-500/50 font-medium rounded-lg text-sm px-5 py-2.5 text-center me-2 mb-2 h-10"
         >
           Clear
@@ -184,11 +184,11 @@
         </div>
       </div>
 
-      @if (isLoading$ | async) {
+      @if (isLoading()) {
       <p class="text-3xl font-bold text-center p-10 text-teal-600">
         Loading ...
       </p>
-      } @else if (hasError$ | async) {
+      } @else if (hasError()) {
       <p class="text-3xl font-bold text-center p-10 text-red-600">
         There was an error loading data.
       </p>
