--- a/src/app/components/admin/users/users.component.html
+++ b/src/app/components/admin/users/users.component.html
@@ -18,7 +18,6 @@
               (getControl('username').invalid && getControl('username').touched) || isSubmitted
             "
             placeholder=""
-            (keydown.enter)="handleEnterKey($event, 0)"
             required
           />
         </Field>
@@ -34,30 +33,8 @@
               (getControl('password').invalid && getControl('password').touched) || isSubmitted
             "
             placeholder=""
-            (keydown.enter)="handleEnterKey($event, 1)"
             required
           />
-        </Field>
-
-        <!-- eId -->
-        <Field label="employee">
-          <select
-            #inputRef
-            name="eId"
-            [formControl]="getControl('eId')"
-            placeholder=""
-            (keydown.enter)="handleEnterKey($event, 2)"
-            class="block py-2.5 px-2 w-full text-sm text-gray-950 bg-transparent border-0 border-b-2 border-gray-300 appearance-none focus:outline-none focus:ring-0 focus:border-teal-600 peer capitalize"
-          >
-            <option value="null" class="capitalize">Select Employee</option>
-            @for(option of employeeOption(); track $index){
-            <option [value]="option?.value" class="capitalize">
-              {{ option?.label }}
-            </option>
-            } @empty {
-            <option value="null" class="capitalize" disabled>No Employee Found</option>
-            }
-          </select>
         </Field>
 
         <!-- isActive -->
@@ -95,13 +72,13 @@
           <input
             #inputRef
             type="submit"
-            [value]="selectedUser ? 'Update' : 'Save'"
+            [value]="selectedUser() ? 'Update' : 'Save'"
             class="text-gray-50 bg-linear-to-r from-teal-400 via-teal-500 to-teal-600 hover:bg-linear-to-br focus:ring-1 focus:outline-none focus:ring-teal-300 shadow-lg shadow-teal-500/50 font-medium rounded-lg text-sm px-5 py-2.5 text-center me-2 mb-2 h-10 w-full"
-            (keydown.enter)="handleEnterKey($event, 2)"
+           
           />
 
           <button
-            (click)="formReset($event)"
+            (click)="formReset()"
             class="text-gray-50 bg-linear-to-r from-red-400 via-red-500 to-red-600 hover:bg-linear-to-br focus:ring-1 focus:outline-none focus:ring-red-300 shadow-lg shadow-red-500/50 font-medium rounded-lg text-sm px-5 py-2.5 text-center me-2 mb-2 h-10"
           >
             Clear
@@ -138,9 +115,9 @@
           </div>
         </div>
 
-        @if (isLoading$ | async) {
+        @if (isLoading()) {
         <p class="text-3xl font-bold text-center p-10 text-teal-600">Loading ...</p>
-        } @else if (hasError$ | async) {
+        } @else if (hasError()) {
         <p class="text-3xl font-bold text-center p-10 text-red-600">
           There was an error loading data.
         </p>
@@ -166,9 +143,6 @@
             >
               <td scope="row" class="p-1">
                 {{ item?.username }}
-              </td>
-              <td scope="row" class="p-1">
-                {{ onDisplayEmployee(item?.eId) }}
               </td>
               <!-- <td class="p-1">
                 {{ item?.password }}
