--- a/src/app/components/admin/login/login.component.html
+++ b/src/app/components/admin/login/login.component.html
@@ -5,7 +5,7 @@
   >
     <form class="space-y-6" [formGroup]="form" (ngSubmit)="onSubmit()">
       <div class="w-full flex flex-col justify-center items-center">
-        <img src="logo.png" alt="logo" class="w-32" />
+        <img src="favicon.ico" alt="logo" class="w-32" />
         <h2 class="font-extrabold text-green-600 uppercase">Company Name</h2>
       </div>
       <!-- username -->
