--- a/src/app/components/admin/menu-list/menu-list.component.html
+++ b/src/app/components/admin/menu-list/menu-list.component.html
@@ -113,8 +113,7 @@
           <input
             type="submit"
             [value]="selectedMenu() ? 'Update' : 'Save'"
-            class="text-gray-50 bg-linear-to-r from-teal-400 via-teal-500 to-teal-600 hover:bg-linear-to-br focus:ring-1 focus:outline-none focus:ring-teal-300 shadow-lg shadow-teal-500/50 font-medium rounded text-sm px-5 py-2.5 text-center me-2 mb-2 h-10 w-full"
-           
+            class="text-gray-50 bg-linear-to-r from-teal-400 via-teal-500 to-teal-600 hover:bg-linear-to-br focus:ring-1 focus:outline-none focus:ring-teal-300 shadow-lg shadow-teal-500/50 font-medium rounded text-sm px-5 py-2.5 text-center me-2 mb-2 h-10 w-full"          
           />
 
           <button
@@ -140,7 +139,7 @@
             <div
               class="absolute inset-y-0 rtl:inset-r-0 start-0 flex items-center ps-3 pointer-events-none"
             >
-              <app-search></app-search>
+                  <fa-icon [icon]="faMagnifyingGlass"></fa-icon>
             </div>
             <input
               #searchInput
@@ -173,11 +172,7 @@
             <th scope="col" class="p-1">icon</th>
             <th scope="col" class="p-1">isActive</th>
             <th scope="col" class="p-1">permissions</th>
-            @if (isEdit()) {
-            <th scope="col" class="px-1 py-3">Edit</th>
-            } @if (isDelete()) {
-            <th scope="col" class="px-1 py-3">Delete</th>
-            }
+            @if (isEdit() || isDelete()) { <th scope="col" class="px-1">Actions</th> }
           </tr>
         </thead>
         <tbody>
@@ -204,25 +199,23 @@
             <td class="p-1">
               {{ item?.permissionsKey }}
             </td>
-            @if (isEdit()) {
-            <td>
-              <button
-                class="text-yellow-400 hover:bg-teal-50 px-1 rounded"
-                (click)="onUpdate(item)"
-              >
-                Edit
-              </button>
-            </td>
-            } @if (isDelete()) {
-            <td>
-              <button
-                class="text-rose-400 hover:bg-teal-50 px-1 rounded"
-                (click)="onDelete(item?.id)"
-              >
-                Delete
-              </button>
-            </td>
-            }
+              <td class="flex gap-1 p-0.5">
+                @if (isEdit()) {
+                <button
+                  class="text-orange-50 bg-orange-400 hover:bg-orange-500 px-1 py-0.5 rounded cursor-pointer"
+                  (click)="onUpdate(item)"
+                >
+                  <fa-icon [icon]="faPencil"></fa-icon>
+                </button>
+                } @if (isDelete()) {
+                <button
+                  class="text-rose-50 bg-rose-600 hover:bg-rose-700 px-1 py-0.5 rounded cursor-pointer"
+                  (click)="onDelete(item?.id)"
+                >
+                  <fa-icon [icon]="faXmark"></fa-icon>
+                </button>
+                }
+              </td>
           </tr>
           }
         </tbody>
