--- a/src/app/layouts/admin/admin.html
+++ b/src/app/layouts/admin/admin.html
@@ -3,7 +3,7 @@
 
   <div class="p-2 ml-12">
     <div
-      class="p-2 border-2 border-teal-700 border-dashed rounded-lg min-h-[98vh] bg-teal-50"
+      class="p-2 border-2 border-teal-700 border-dashed rounded-lg min-h-[98vh] bg-neutral-primary"
     >
       <router-outlet />
     </div>
