--- a/src/app/components/admin/menu-list/menu-list.component.html
+++ b/src/app/components/admin/menu-list/menu-list.component.html
@@ -113,6 +113,7 @@
           <input
             type="submit"
             [value]="selectedMenu() ? 'Update' : 'Save'"
+            [disabled]="isSubmitted()"
             class="text-gray-50 bg-linear-to-r from-teal-400 via-teal-500 to-teal-600 hover:bg-linear-to-br focus:ring-1 focus:outline-none focus:ring-teal-300 shadow-lg shadow-teal-500/50 font-medium rounded text-sm px-5 py-2.5 text-center me-2 mb-2 h-10 w-full"          
           />
 
